edit in index file for image

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         </div>
         <div class="carousel-item active ">
           <div class="image rounded-circle">
-            <img src="Images/testimonial-1.jpg" class="rounded-circle" alt="">
+            <img src="images/testimonial-1.jpg" class="rounded-circle" alt="">
           </div>
           <div class="customer py-5 bg-white px-md-5">
             <h4 class="fw-bolder pt-5">Marissa Mayer</h4>
@@ -396,7 +396,7 @@
         </div>
         <div class="carousel-item">
           <div class="image rounded-circle">
-            <img src="Images/testimonial-2.jpg" class="rounded-circle" alt="">
+            <img src="images/testimonial-2.jpg" class="rounded-circle" alt="">
           </div>
           <div class="customer py-5 bg-white px-md-5">
             <h4 class="fw-bolder pt-5">Mark Zuckerberg</h4>
